<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.example.testapplication.ui.file.FileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".ui.file.FileFragment">

        <TextView
            android:id="@+id/info_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_file"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.602" />

        <TextView
            android:id="@+id/file_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{@string/file_path(viewModel.path)}"
            android:textAlignment="center"
            android:textSize="10sp"
            android:visibility="@{viewModel.isCreatedFile == true ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_tv"
            app:layout_constraintVertical_bias="0.515" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428">

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/text_file_text_input"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/text_for_file"-->
<!--                android:paddingHorizontal="@dimen/activity_horizontal_margin"-->
<!--                app:placeholderText="@string/placeholder_text_push">-->

                <EditText
                    android:id="@+id/text_file_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100" />

<!--            </com.google.android.material.textfield.TextInputLayout>-->

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/create_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:text="@string/create_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/write_text_to_file_btn"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
            app:layout_constraintVertical_bias="0.164" />

        <Button
            android:id="@+id/write_text_to_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:text="@string/write_text_to_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
            app:layout_constraintVertical_bias="0.164" />

        <Button
            android:id="@+id/read_from_file_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:onClick="@{clickListener}"
            android:text="@string/read_from_file"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:visibility="@{viewModel.isWroteText == true ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/write_text_to_file_btn"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_from_file_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.text}"
            android:visibility="@{viewModel.isWroteText == true ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/read_from_file_btn"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>